Splashpage overflow and features fix

--- a/src/styles/AppLayout.css
+++ b/src/styles/AppLayout.css
@@ -31,10 +31,10 @@
   text-align: center;
   grid-row: 3; /* explicitly place in footer row of grid */
 
-    border-top-left-radius: 80px;
-  border-top-right-radius: 80px;
-  margin-top: -60px;
-  padding-top: 6rem;
+    border-top-left-radius: 70px;
+  border-top-right-radius: 70px;
+  margin-top: -150px;
+  /* padding-top: 6rem; */
 }
 
 .footer-content {
